--- a/nui/ore.css
+++ b/nui/ore.css
@@ -219,17 +219,17 @@ a img:hover {
 
 #Notify-Window {
   position: absolute;
-  top: 0vh;
+  top: 1vh;
   right: 0vw;
   width: 43vw;
-  height: 24vh;
+  height: 26vh;
 }
 
 .noty {
-  color: #000;
+  color: rgb(240, 240, 240);
   margin: 2px;
   text-align: left;
-  padding: 10px;
+  padding: 6px;
   border-radius: 3px;
   font-weight: 600;
   letter-spacing: 0.2px;
@@ -239,17 +239,17 @@ a img:hover {
 }
 
 .normal {
-  background-color: rgba(224, 210, 84, 0.795);
+  background-color: rgba(20, 20, 20, 0.795);
 }
 
 .success {
-  background-color: rgba(84, 224, 142, 0.795);
+  background-color: rgba(0, 255, 106, 0.795);
 }
 
 .warn {
-  background-color: rgba(221, 113, 41, 0.795);
+  background-color: rgba(255, 102, 0, 0.795);
 }
 
 .error {
-  background-color: rgba(224, 84, 103, 0.795);
+  background-color: rgba(255, 0, 34, 0.795);
 }
